# labo-frontier-algorithms

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ssl_demo.md  ssl_demo_guide.md
experiments/: run_ssl_demo.py
labo_frontier_algorithms/: __init__.py  __main__.py  demo.py  signal.py  ssl.py
labo_frontier_algorithms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_ssl.py
